--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "SET DEBUG=petsnode:server & nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -13,6 +14,7 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "mathjs": "^12.2.1",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
